# riaps-integration

./: .travis.yml  Jenkinsfile  README.md  RIAPS-PackageLists.xlsx  _config.yml  version.sh
bbb-creation-files/: CMakeLists.txt  README.md  base_bbb_bootstrap.sh  swap-install-bbb.sh
bbb-creation-files/etc/profile.d/: 20-riaps-gpio.sh
bbb-creation-files/etc/sudoers.d/: riaps
doc/: example.md
doc/source/: HostEnvSetup.rst  NodeSetup.rst  conf.py  index.rst
doc/tutorials/: example.md
env_setup_tests/: README.md
env_setup_tests/WeatherMonitor/: TempSensor.py  wmonitor_1_bbb.depl
riaps-bbbruntime/: LICENSE  README.md  bootstrap.sh  riaps_install.sh  riaps_install_bbb.sh  riaps_update_bbb_v1_1_16.sh  riaps_update_bbb_v1_1_18.sh
riaps-docker/: CMakeLists.txt  Dockerfile  riaps-install-builds.sh  vm_utils_install.sh
riaps-node-creation/: BBB_README.md  CMakeLists.txt  NANO_README.md  README.md  README_AM64.md  README_BBB.md  README_NANO.md  README_RPI.md  RPI_README.md  base_am64_bootstrap.sh  base_bbb_bootstrap.sh  base_bplay_bootstrap.sh  base_imx8_bootstrap.sh  base_iot_bootstrap.sh  base_nano_bootstrap.sh  base_rpi_bootstrap.sh  bbb_node_creation.conf  liblinks.sh  nano_node_creation.conf  node_creation_am64.conf  node_creation_bbb.conf  node_creation_bplay.conf  node_creation_imx8.conf  node_creation_nano.conf  node_creation_rpi.conf  rpi_node_creation.conf
riaps-node-creation/etc/network/: interfaces-riaps
riaps-node-creation/etc/sudoers.d/: riaps
riaps-node-creation/install_scripts/: apt_pkg_installs.sh  build_setup.sh  external_build.sh  hw_setup.sh  network_setup.sh  python_installs.sh  user_functions.sh  utils_install.sh
riaps-node-runtime/: README.md  riaps_install_node.sh  riaps_update_node_v1_1_18.sh
riaps-repo/: README.md
riaps-repo/aptrepo-debian/conf/: distributions  options
riaps-repo/aptrepo-ubuntu/conf/: distributions
riaps-repo/conf/: distributions
riaps-x86runtime/: CMakeLists.txt  Dockerfile  LICENSE  README.md  Vagrantfile  bootstrap.sh  connect_remote_nodes  connect_remote_nodes.sh  riaps_aptrepo_keyupdate.sh  riaps_eclipse_information.md  riaps_install.sh  riaps_install_amd64.sh  riaps_install_vm.sh  riaps_update_amd64_v1_1_16.sh  riaps_update_amd64_v_1_1_18.sh  riaps_update_vm_v1_1_18.sh  riaps_update_vm_v_1_1_18.sh  secure_keys  secure_keys.sh  sources.list  vm-creation-readme.md  vm_creation.conf
riaps-x86runtime/env_setup_tests/: README.md
riaps-x86runtime/env_setup_tests/WeatherMonitor/: README.md  TempMonitor.py  TempSensor.py  riaps-log.conf  wmonitor_1_node.depl  wmonitor_many_bbb.depl  wmonitor_many_nodes.depl  wmonitor_vm_only.depl
riaps-x86runtime/install_scripts/: vm_apt_pkg_installs.sh  vm_build_setup.sh  vm_hw_setup.sh  vm_python_installs.sh  vm_user_functions.sh  vm_utils_install.sh
riaps-x86runtime/sys_install_files/: vm_ubuntu.sources  zeromq.sources
rpi-creation-files/: CMakeLists.txt  README.md  base_bbb_bootstrap.sh  base_rpi_bootstrap.sh
scripts/: download_packages.sh  github_oauth  id_rsa_riaps_global  id_rsa_riaps_global.pub  install_integration.sh  readme.md  setup.conf
scripts/bbb/: fabfile_bbb.py  readme.md  riaps_bbb_base_setup.sh
scripts/bbb/conf/: sethostname.service
scripts/bbb/etc/: issue.net  motd  resolv.conf
scripts/bbb/etc/riaps/: env.conf
scripts/bbb/etc/udev/rules.d/: 80-gpio-noroot.rules
scripts/devvm/: readme.md
test/scripts/: run_component_tests.py
test/testPubSub/test_1_1/: deployment.py
test/testPubSub/test_1_1/configs/: master.py
test/testReqRep/test_1_1_local/configs/: config.json
test/test_common/: startDiscovery.py
